--- a/style.css
+++ b/style.css
@@ -1,4 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+:root{
+    /*COLORS*/
+    --color-white:hsl(252,30%,100%);
+    --color-light:hsl(252,30%,95%);
+    --color-gray:hsl(252,15%,65%);
+    --color-primary:hsl(252,75%,60%);
+    --color-secondary:hsl(252,100%,90%);
+    --color-success:hsl(120,95%,65%);
+    --color-danger:hsl(0,95%,65%);
+    --color-dark:hsl(252,30%,17%);
+    --color-black:hsl(252,30%,10%);
+
+    /*SIZES*/
+    --border-radius:2rem;
+    --card-border-radius:1rem;
+    --btn-padding:0.6rem 2rem;
+    --search-padding:0.6rem 1rem;
+    --card-padding:1rem;
+    --font-size:0.9rem;
+}
+
+
 *, *::before, *::after {
   margin: 0;
   padding: 0;
@@ -11,8 +33,8 @@
 
 html,body {
   font-family: "Poppins", sans-serif;
-  color: hsl(252, 30%, 17%);
-  background-color: hsl(252, 30%, 95%);
+  color:var(--color-dark);
+  background-color:var(--color-light);
   overflow-x: hidden;
 }
 
@@ -22,7 +44,7 @@ nav {
   position: fixed;
   top: 0;
   z-index: 10;
-  background-color: white;
+  background-color:var(--color-white);
 }
 
 /*GENERAL--STYLES*/
@@ -38,7 +60,7 @@ img {
 
 .button {
   display: inline-block;
-  padding: 0.6ren 2rem;
+  padding: var(--btn-padding);
   font-weight: 500;
   border-radius: 2rem;
   cursor: pointer;
@@ -49,42 +71,49 @@ img {
   opacity: 0.8;
 }
 .button__primary {
-  background: hsl(252, 75%, 60%);
-  color: hsl(252, 30%, 100%);
+  background:var(--color-primary);
+  color: var(--color-white);
 }
 
 .text__bold {
   font-weight: 500;
 }
 .text__muted {
-  color: hsl(252, 15%, 65%);
+  color:var(--color-gray);
 }
 
-/*.container{
+/*--CLASSES INSIDE HTML--*/
+.header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: hsl(252, 30%, 100%);
-}*/
-.container__search {
-  border-radius: 5px;
-  size: 2rem;
+  background-color:var(--color-white);
 }
-.container__last {
+.header__search {
+  background: var(--color-light);
+  border-radius:var(--border-radius);
+  padding: var(--btn-padding);
+}
+.header__search input[type="search"]{
+    background: transparent;
+    width:30vw;
+    /*margin-left: 1rem;*/
+    font-size:var(--font-size);
+}
+.header__search input[type="search"]::placeholder{
+    color:var(--color-gray);
+}
+.header__last {
   display: flex;
   align-items: center;
+  gap: 1rem;
 }
-.container__cta {
-  margin-right: 1rem;
+.header__cta {
+  /*something should go in here, if not that's fine too;)*/
 }
-.container__profile {
+.header__profile {
   width: 2.5rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
   overflow: hidden;
-}
-nav .container{
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
 }
