Random checkpoint commit.

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ img {
   gap: 1rem;
 }
 .header__cta {
-  /*something should go in here, if not that's fine too;)*/
+  /*just a random commit*/
 }
 .header__profile {
   width: 2.5rem;
