--- a/style.css
+++ b/style.css
@@ -1,29 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-:root{
-    /*COLORS*/
-    --color-white:hsl(252,30%,100%);
-    --color-light:hsl(252,30%,95%);
-    --color-gray:hsl(252,15%,65%);
-    --color-primary:hsl(252,75%,60%);
-    --color-secondary:hsl(252,100%,90%);
-    --color-success:hsl(120,95%,65%);
-    --color-danger:hsl(0,95%,65%);
-    --color-dark:hsl(252,30%,17%);
-    --color-black:hsl(252,30%,10%);
 
-    /*SIZES*/
-    --border-radius:2rem;
-    --card-border-radius:1rem;
-    --btn-padding:0.6rem 2rem;
-    --search-padding:0.6rem 1rem;
-    --card-padding:1rem;
-    --font-size:0.9rem;
-    --sticky-top-left:5.4rem;
-    --sticky-top-right:-18rem;
+:root {
+  /*COLORS*/
+  --color-white: hsl(252, 30%, 100%);
+  --color-light: hsl(252, 30%, 95%);
+  --color-gray: hsl(252, 15%, 65%);
+  --color-primary: hsl(252, 75%, 60%);
+  --color-secondary: hsl(252, 100%, 90%);
+  --color-success: hsl(120, 95%, 65%);
+  --color-danger: hsl(0, 95%, 65%);
+  --color-dark: hsl(252, 30%, 17%);
+  --color-black: hsl(252, 30%, 10%);
+
+  /*SIZES*/
+  --border-radius: 2rem;
+  --card-border-radius: 1rem;
+  --btn-padding: 0.6rem 2rem;
+  --search-padding: 0.6rem 1rem;
+  --card-padding: 1rem;
+  --font-size: 0.9rem;
+  --sticky-top-left: 5.4rem;
+  --sticky-top-right: -18rem;
 }
 
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   outline: 0;
@@ -33,10 +36,11 @@
   border: none;
 }
 
-html,body {
+html,
+body {
   font-family: "Poppins", sans-serif;
-  color:var(--color-dark);
-  background-color:var(--color-light);
+  color: var(--color-dark);
+  background-color: var(--color-light);
   overflow-x: hidden;
 }
 
@@ -46,12 +50,14 @@ nav {
   position: fixed;
   top: 0;
   z-index: 10;
-  background-color:var(--color-white);
+  background-color: var(--color-white);
 }
-img{
+
+img {
   display: block;
   width: 100%;
 }
+
 /*GENERAL--STYLES*/
 .container {
   width: 80%;
@@ -74,142 +80,171 @@ img{
   transition: all 300ms ease;
   font-size: 0.9rem;
 }
+
 .button:hover {
   opacity: 0.8;
 }
+
 .button__primary {
-  background:var(--color-primary);
+  background: var(--color-primary);
   color: var(--color-white);
 }
 
 .text__bold {
   font-weight: 500;
 }
+
 .text__muted {
-  color:var(--color-gray);
+  color: var(--color-gray);
 }
 
 /*--CLASSES INSIDE HTML--*/
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color:var(--color-white);
+  background-color: var(--color-white);
 }
+
 .header__search {
   background: var(--color-light);
-  border-radius:var(--border-radius);
+  border-radius: var(--border-radius);
   padding: var(--btn-padding);
 }
-.header__search input[type="search"]{
-    background: transparent;
-    width:30vw;
-    /*margin-left: 1rem;*/
-    font-size:var(--font-size);
+
+.header__search input[type="search"] {
+  background: transparent;
+  width: 30vw;
+  /*margin-left: 1rem;*/
+  font-size: var(--font-size);
 }
-.header__search input[type="search"]::placeholder{
-    color:var(--color-gray);
+
+.header__search input[type="search"]::placeholder {
+  color: var(--color-gray);
 }
+
 .header__last {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
+
 /*-------------MAIN-----------*/
-main{
-position: relative;
-margin-top:5.4rem; /*this gets rid of the double scroll bars in y direction,but position sticky for left bar ain't working now!*/
+main {
+  position: relative;
+  margin-top: 5.4rem;
+  /*this gets rid of the double scroll bars in y direction,but position sticky for left bar ain't working now!*/
 }
-main .container{   
-display:grid;
-grid-template-columns: 18vw auto 20vw;
-column-gap: 2rem;
-overflow: hidden;
+
+main .container {
+  display: grid;
+  grid-template-columns: 18vw auto 20vw;
+  column-gap: 2rem;
+  overflow: hidden;
 }
-.left{
-position:sticky;
-height:max-content;  
-top:var(--sticky-top-left);
+
+.left {
+  position: sticky;
+  height: max-content;
+  top: var(--sticky-top-left);
 }
-.left .profile{
+
+.left .profile {
   display: block;
   background-color: var(--color-white);
   border-radius: var(--card-border-radius);
   padding: var(--card-padding);
   align-items: center;
-  width:100%;
+  width: 100%;
   row-gap: 1rem;
 }
+
 /*-------------SIDEBAR-----------*/
-.left .sidebar{
-  margin-top:1rem;
+.left .sidebar {
+  margin-top: 1rem;
   background: var(--color-white);
   border-radius: var(--card-border-radius);
 }
-.left .sidebar .sidebar-item{
+
+.left .sidebar .sidebar-item {
   display: flex;
   align-items: center;
-  height:4rem;
-  cursor:pointer;
+  height: 4rem;
+  cursor: pointer;
   translate: all 300ms ease;
-  position: relative; 
+  position: relative;
 }
-.left .sidebar .sidebar-item:hover{
-  background:var(--color-light);
-}
-.left .sidebar i{
-  margin-left:2 rem;
-  position: relative; /*commenting out till I know it's purpose*/
-} 
 
-.left .sidebar .notfication-count{
+.left .sidebar .sidebar-item:hover {
+  background: var(--color-light);
+}
+
+.left .sidebar i {
+  margin-left: 2 rem;
+  position: relative;
+  /*commenting out till I know it's purpose*/
+}
+
+.left .sidebar .notfication-count {
   background-color: var(--color-danger);
-  position:absolute;
+  position: absolute;
+  /*not working*/
 }
-.left .sidebar h3{
+
+.left .sidebar h3 {
   font-size: 1rem;
-  margin-left:1.5rem;
+  margin-left: 1.5rem;
 }
-.left .sidebar .active{
-  background:var(--color-light);
+
+.left .sidebar .active {
+  background: var(--color-light);
 }
-.left .sidebar .active i,.left .sidebar .active h3{
-  color:var(--color-primary);
+
+.left .sidebar .active i,
+.left .sidebar .active h3 {
+  color: var(--color-primary);
 }
-.left .sidebar .active::before{
-  content:'';
+
+.left .sidebar .active::before {
+  content: '';
   display: block;
-  width:0.5rem;
-  height:100%;
-  position:relative;
+  width: 0.5rem;
+  height: 100%;
+  position: relative;
   background: var(--color-primary);
 }
-.left .sidebar .sidebar-item:first-child.active{
+
+.left .sidebar .sidebar-item:first-child.active {
   border-top-left-radius: var(--card-border-radius);
-  overflow:hidden;
+  overflow: hidden;
 }
-.left .sidebar .sidebar-item:last-child.active{
+
+.left .sidebar .sidebar-item:last-child.active {
   border-bottom-left-radius: var(--card-border-radius);
-  overflow:hidden;
+  overflow: hidden;
 }
-.left .button{
-padding:1rem 0;
-width:100%;
-text-align: center;
-margin-top:1rem;
+
+.left .button {
+  padding: 1rem 0;
+  width: 100%;
+  text-align: center;
+  margin-top: 1rem;
 }
 
 /*-----------------NOTIFICATION-POPUP-----------------*/
-.left .notification-popup{
+.left .notification-popup {
   position: absolute;
   left: 110%;
   width: 30rem;
-  background:var(--color-white);
-  top: 0; /*checks for nearest sidebar item with position:relative*/
+  background: var(--color-white);
+  top: 0;
+  /*checks for nearest sidebar item with position:relative*/
   border-radius: var(--card-border-radius);
-  padding:var(--card-padding);
-  display:none; /*usage of js will make it visible later*/
+  padding: var(--card-padding);
+  display: none;
+  /*usage of js will make it visible later*/
 }
+
 /*.left .notification-popup::before{ uncomment this code to get small kaju-katli!
   content:"";
   width:1.2rem;
@@ -220,15 +255,99 @@ margin-top:1rem;
   left:0.6 rem;
   transform:rotate(45deg);
 }*/
-.left .notification-popup > div{
-  display:flex;
-  align-items:start;
-  gap:1rem;
+.left .notification-popup>div {
+  display: flex;
+  align-items: start;
+  gap: 1rem;
 }
 
-.middle{
-background-color: green;
+.middle {}
+
+.middle .stories {
+  display: flex;
+  justify-content: space-between;
+  height: 12rem;
+  gap: 0.5rem;
+  margin-bottom: 2rem;
 }
-.right{
-background-color: pink;
+
+.middle .stories .story {
+  height: 12rem;
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  /*-------makes no sense to me-------*/
+}
+
+.middle .stories .story::before {
+  content:"";
+  background: black;
+  display:block;
+  position: absolute;
+  width:100%;
+  height:5rem;
+  bottom:0;
+  background:linear-gradient(transparent,rgba(0,0,0,0.75));
+  z-index:1;
+}
+.middle .stories .story .name{
+  color:var(--color-white);
+  z-index:2;
+}
+
+.middle .stories .story:nth-child(1) {
+  background: url(./images/story-1.jpg) no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(2) {
+  background: url(./images/story-2.jpg) no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(3) {
+  background: url(./images/story-3.jpg) no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(4) {
+  background: url(./images/story-4.jpg) no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(5) {
+  background: url(./images/story-5.jpg) no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(6) {
+  background: url(./images/story-6.jpg) no-repeat center center/cover;
+}
+.middle .stories .story .profile-photo{
+  border:4px solid var(--color-danger);
+}
+
+.middle .create-post {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: var(--color-white);
+  padding:var(--card-padding);
+  border-radius: var(--card-border-radius);
+}
+.middle .create-post input[type="text"]{
+  width:25vw;
+  justify-self: start;
+}
+.middle .create-post input[type="text"]::placeholder{
+  font-size: var(--font-size);
+  background-color: var(--color-light);
+  border-radius: var(--card-border-radius);
+  padding:var(--btn-padding);
+  color:var(--color-gray);
+}
+
+.right {
+  background-color: pink;
 }
