--- a/style.css
+++ b/style.css
@@ -422,6 +422,7 @@ main .container {
   padding: var(--btn-padding);
   display: flex;
   justify-content: space-between;
+  margin:0.5rem 0;
 }
 .right .messages .search-bar input[type="search"]{
   background: transparent;
@@ -431,7 +432,17 @@ main .container {
 .right .messages .category{
   position: relative;
   display:flex;
-  justify-content: space-between; 
+  justify-content: space-between;
+  margin-bottom:0.5rem; 
+}
+.right .messages .message{
+  background:var(--color-light);
+  border-radius: var(--card-border-radius);
+  padding:0.5rem;
+  margin-bottom:0.5rem;
+}
+.right .messages .message:last-child{
+  margin-bottom:0;
 }
 
 .right .friend-requests{
@@ -455,3 +466,54 @@ main .container {
 .right .friend-requests .action:last-child{
   margin-bottom:0;
 }
+.customise-theme{
+  background: rgba(255,255,255,0.5);
+  display: grid;
+  position: fixed;
+  width:100vw;
+  height:100vh;
+  z-index:11;
+  top:0;
+  left:0;
+  place-items: center;
+  text-align: center;
+}
+.customise-theme .card{
+  background:var(--color-white);
+  padding:4rem;
+  border-radius:var(--card-border-radius);
+}
+
+/*---------------------------FONT-SIZE-FOR-CUSTOMISE-------------------------------*/
+.card .font-size >div{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--color-light);
+  padding: var(--search-padding);
+  border-radius: var(--card-border-radius);
+}
+.card .choose-size{
+  background:var(--color-secondary);
+  height:0.3rem;
+  width:100%;
+  margin:0 1rem;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.card .choose-size span{
+  width:1rem;
+  aspect-ratio: 1/1;
+  background-color: var(--color-secondary);
+  border-radius: 50%;
+  margin-right:0.5rem;
+  cursor:pointer;
+}
+.card .choose-size span:last-child{
+  margin-right:0;
+}
+.card .choose-size span.active{
+  background-color:var(--color-primary);
+}
+
