--- a/style.css
+++ b/style.css
@@ -263,8 +263,6 @@ main .container {
   gap: 1rem;
 }
 
-.middle {}
-
 .middle .stories {
   display: flex;
   justify-content: space-between;
@@ -466,9 +464,10 @@ main .container {
 .right .friend-requests .action:last-child{
   margin-bottom:0;
 }
+/*--------------------------CUSTOMISE----------------------------------------*/
 .customise-theme{
   background: rgba(255,255,255,0.5);
-  display: grid;
+  display: none;
   position: fixed;
   width:100vw;
   height:100vh;
@@ -485,6 +484,9 @@ main .container {
 }
 
 /*---------------------------FONT-SIZE-FOR-CUSTOMISE-------------------------------*/
+.card .font-size{
+  margin-top: 1rem;
+}
 .card .font-size >div{
   display: flex;
   justify-content: space-between;
@@ -516,4 +518,141 @@ main .container {
 .card .choose-size span.active{
   background-color:var(--color-primary);
 }
+/*--------------------------COLOR-OPTIONS FOR CUSTOMISE-------------------------*/
+.customise-theme .color-options{
+  margin-top:1rem;
+}
 
+.customise-theme .color-options .pick-color{
+  background-color: var(--color-light);
+  padding:var(--search-padding);
+  border-radius:var(--card-border-radius);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.customise-theme .color-options .pick-color span{
+  display:block;
+  width:2.2rem;
+  height:2.2rem;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.customise-theme .color-options .pick-color span.active{
+  border:5px solid white;
+}
+
+.customise-theme .color-options .pick-color span:nth-child(1){
+  background-color:var(--color-primary);
+}
+.customise-theme .color-options .pick-color span:nth-child(2){
+  background-color:hsl(52,75%,60%);
+}
+.customise-theme .color-options .pick-color span:nth-child(3){
+  background-color:var(--color-danger);
+}
+.customise-theme .color-options .pick-color span:nth-child(4){
+  background-color:hsl(152,75%,60%);
+}
+.customise-theme .color-options .pick-color span:nth-child(5){
+  background-color:hsl(202,75%,60%);
+}
+
+/*--------------CUSTOMISE-THEME-BACKGROUND------------------------------*/
+.customise-theme .background{
+  margin-top:1rem;
+}
+.customise-theme .background .background-picker{
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 1rem;
+}
+.customise-theme .background .background-picker .active{
+  border:3px solid var(--color-primary);
+}
+.customise-theme .background .background-picker .light{
+  background:var(--color-light);
+  padding: var(--btn-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.customise-theme .background .background-picker .light>span{
+  margin-right:1rem;
+  background-color:white;
+  width:1.5rem;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  border:3px solid black;
+}
+.customise-theme .background .background-picker .dim{
+  background:var(--color-light);
+  padding: var(--btn-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.customise-theme .background .background-picker .dim>span{
+  margin-right:1rem;
+  background-color: gray;
+  width:1.5rem;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  border: 3px solid black;
+}
+.customise-theme .background .background-picker .lights-out{
+  background:var(--color-light);
+  padding: var(--btn-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.customise-theme .background .background-picker .lights-out>span{
+  margin-right:1rem;
+  background-color: black;
+  width:1.5rem;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  border:3px solid white;
+}
+
+/*============================================*/
+/*---------------MEDIA-QUERIES FOR MOBILE-----------------*/
+/*============================================*/
+@media screen and (max-width:992px) {
+  nav .header__search{
+    display: none;
+  }
+  main .container{
+    grid-template-columns: 0 auto 5rem;
+  }
+  main .container .left{
+    grid-column:3/4;
+    position: fixed;
+    bottom:0;
+    right:0;
+  }
+  .left .notification-popup{
+    position: absolute;
+    left:-20rem;
+    width:20rem;
+  }
+  .left .notification-popup::before{
+    display:absolute;
+    top:1.3rem;
+    left:calc(20rem-0.6rem);
+    display: block;
+  }
+  main .container .middle{
+    grid-column: 1/3;
+  }
+  main .container .right{
+    display:none;
+  }
+}
